[package]
name = "cs-ping"
version = "0.1.0"
edition = "2021"

[dependencies]
surge-ping = { version = "0" }
reqwest = { version = "0" }
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread"] }
trust-dns-resolver = { version = "0", features = ["dns-over-rustls"] }
futures = { version = "0" }
rand = { version = "0" }
indicatif = { version = "0" }
lazy-regex = { version = "3" }
anyhow = { version = "1" }
log = { version = "0", features = ["release_max_level_info"] }
env_logger = { version = "0" }
dotenv = { version = "0" }
zip = { version = "2", default-features = false }
chrono = { version = "0" }
maxminddb = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
parking_lot = { version = "0" }
owo-colors = { version = "4" }
colorgrad = { version = "0" }
rand_xoshiro = { version = "0" }

[profile.release]
strip = true
panic = "abort"
